# fibkvc

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  RELEASE_GUIDE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
benchmarks/: README.md  __init__.py  bench_cache_performance.py  bench_hash_distribution.py  bench_range_queries.py
examples/: README.md  basic_3d_cache.py  basic_usage.py  hierarchical_cache_example.py  monitoring.py  range_queries_example.py
fibkvc/: __init__.py  fibonacci_cache.py  fibonacci_config.py  fibonacci_hash.py
fibkvc/lattice/: __init__.py  fibonacci_hash_3d.py  hierarchy.py  lattice_cache.py  octree.py
tests/: __init__.py
tests/lattice/: __init__.py  test_backward_compatibility.py  test_fibonacci_hash_3d.py  test_fibonacci_hash_3d_properties.py  test_hierarchy.py  test_lattice_cache.py  test_lattice_cache_properties.py  test_octree.py  test_octree_properties.py
